# docker_compose

./: Makefile  docker-compose.yaml  graphql.txt
backend/: .env_local  Cargo.toml  Dockerfile  readme.md
backend/migrations/2020-03-26-084736_create_people/: up.sql
backend/src/: graphql.rs  main.rs  todo.rs  web.rs
